show order info on button/modify format

--- a/client/src/components/MessagePage.css
+++ b/client/src/components/MessagePage.css
@@ -44,6 +44,7 @@
 
 .message-other {
     text-align: left;
+    color: #ffffff;
     background-color: #007bff;
     padding: 5px;
     margin-bottom: 5px;
